# xsd-parser

./: Cargo.toml
examples/: custom_renderer.rs  generated.rs  simple.rs
src/: lib.rs
src/generator/renderer/quick_xml/: deserialize.rs
src/schema/: xs.rs  xs_generated_new.rs  xs_generated_old.rs
tests/schema/: mod.rs
tests/schema/aixm_5_1_1/: mod.rs
tests/schema/aixm_5_1_1/expected/: serde_quick_xml.rs
tests/schema/aixm_5_1_1/schema/aixm/: AIXM_AbstractGML_ObjectTypes.xsd  AIXM_DataTypes.xsd  AIXM_Features.xsd
tests/schema/aixm_5_1_1/schema/aixm/message/: AIXM_BasicMessage.xsd
tests/schema/aixm_5_1_1/schema/gco/: basicTypes.xsd  gcoBase.xsd
tests/schema/aixm_5_1_1/schema/gml/: gmlBase.xsd
